# rag-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/rag_assistant/: __init__.py  config.py
src/rag_assistant/core/: chunker.py  embedder.py  llm.py  pdf_loader.py  prompts.py  rag_pipeline.py  retriever.py  vector_store.py
src/rag_assistant/utils/: exceptions.py  logger.py
tests/: conftest.py  test_chunker.py  test_embedder.py  test_llm.py  test_pdf_loader.py  test_rag_pipeline.py  test_retriever.py  test_vector_store.py
ui/: app.py
