[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-assistant"
version = "0.1.0"
description = "Assistant conversationnel RAG (PDF + Mistral AI + ChromaDB)"
readme = "README.md"
requires-python = ">=3.11"
# Les dépendances runtime sont gérées dans requirements.txt
# (pyproject sert ici au packaging et à la configuration des outils)

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]   # erreurs, pyflakes, imports, pyupgrade, bugbear

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
